--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "scripts": {
     "postinstall": "selenium-standalone install",
     "pretest": "rm -rf allure-results",
-    "test": "npm-run-all -r -p test:*",
     "test:selenium": "selenium-standalone start",
-    "test:mocha": "sleep 1 && multi='progress=- mocha-allure-reporter=-' mocha",
+    "test": "sleep 1 && multi='progress=- mocha-allure-reporter=-' mocha",
     "report": "allure generate allure-results --clean -o allure-report && allure open allure-report"
   },
   "repository": {
